# codeeval

./: CMakeLists.txt  COPYING  README.md  challenge-0001.cpp  challenge-0002.cpp  challenge-0003.cpp  challenge-0004.cpp  challenge-0005.cpp  challenge-0007.cpp  challenge-0008.cpp  challenge-0009.cpp  challenge-0010.cpp  challenge-0012.cpp  challenge-0013.cpp  challenge-0014.cpp  challenge-0015.cpp  challenge-0016.cpp  challenge-0018.cpp  challenge-0019.cpp  challenge-0020.cpp  challenge-0022.cpp  challenge-0023.cpp  challenge-0024.cpp  challenge-0025.cpp  challenge-0027.cpp  challenge-0031.cpp  challenge-0038.cpp  challenge-0039.cpp  challenge-0041.cpp  challenge-0045.cpp  challenge-0048.cpp  challenge-0051.cpp  challenge-0052.cpp  challenge-0064.cpp  challenge-0071.cpp  challenge-0076.cpp  challenge-0091.cpp  challenge-0097.cpp  challenge-0108.cpp  challenge-0157.cpp  (+12 more)
input/: 0010-mod.txt  0027.txt  0045-med.txt  0052-hard.txt  0076-custom.txt  0108-hard.txt  0185.txt  0207-hard.txt  0210-hard.txt
output/: 0010-mod.txt  0045-med.txt  0045.txt  0052-hard.txt  0071.txt  0108-hard.txt  0108.txt  0185.txt  0192.txt  0207-hard.txt  0210-hard.txt
